apps/default/adguard/deployment.yml
---
# Source: adguard-home/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: default
  labels:
    app.kubernetes.io/name: adguard-home
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-home
      app.kubernetes.io/instance: adguard-home
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-home
        app.kubernetes.io/instance: adguard-home
      annotations:
        prometheus.io/port: api
        prometheus.io/scrape: "true"
    spec:
      securityContext:
        {}
      containers:
        - name: adguard-home
          securityContext: {}
          image: "adguard/adguardhome:v0.102.0"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: work
              mountPath: /opt/adguardhome/work
              readOnly: false
            - name: config
              mountPath: /opt/adguardhome/conf
              readOnly: false
          ports:
            - name: http
              containerPort: 3000
            - name: dns
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /login.html
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            failureThreshold: 5
            periodSeconds: 10
          resources: {}
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: longhorn-pvc-adguard
        - name: work
          persistentVolumeClaim:
            claimName: longhorn-pvc-adguard
