apps/default/adguard/service.yml
---
# Source: adguard-home/templates/service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-udp
  namespace: default
  labels:
    app.kubernetes.io/name: adguard-home
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard-home-svc
spec:
  type: LoadBalancer
  loadBalancerIP: "10.0.40.23"
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
  selector:
    app.kubernetes.io/name: adguard-home
---
# Source: adguard-home/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: default
  labels:
    app.kubernetes.io/name: adguard-home
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard-home-svc
spec:
  type: LoadBalancer
  loadBalancerIP: "10.0.40.23"
  externalTrafficPolicy: Local
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: adguard-home
