apps/default/adguard/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: adguard-home
  namespace: default
  labels:
    app.kubernetes.io/name: adguard-home
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: adguard.home-lab.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: adguard-home
              servicePort: http
